# Emb2Cat

./: .gitignore  infer.sh  plot.sh  pyproject.toml  train.sh
src/: category.yaml  config.yaml
src/modelling/: classification_head.py  dataset.py  focal_loss.py
src/pipeline/: cluster_embed2cat.py  infer_embed2cat.py  knn_embed2cat.py  train_embed2cat.py  train_plotter.py
src/script/: metric_collector.py
src/utils/: count_category.py  save_param.py  seed.py
